Bug #7860
libc: indentation errors
Start date:
2017-02-14
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
./port/gen/ttyname.c:695:4: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
gen/proc64_id.c:157:4: error: this 'else' clause does not guard... [-Werror=misleading-indentation]
Updated by Electric Monk almost 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit f24aa11fb7f6343b7e687fa57ee8997cc55e2883
commit f24aa11fb7f6343b7e687fa57ee8997cc55e2883 Author: Toomas Soome <tsoome@me.com> Date: 2017-03-02T14:08:56.000Z 7860 libc: indentation errors Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Dale Ghent <daleg@omniti.com> Reviewed by: Juraj Lutter <juraj@lutter.sk> Reviewed by: Yuri Pankov <yuri.pankov@gmail.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>