7860 libc: indentation errors Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Dale Ghent <daleg@omniti.com> Reviewed by: Juraj Lutter <juraj@lutter.sk> Reviewed by: Yuri Pankov <yuri.pankov@gmail.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>